Added services and updates

--- a/KiteAndKeyBrewery/src/app/components/calculator/dashboard-element.component.html
+++ b/KiteAndKeyBrewery/src/app/components/calculator/dashboard-element.component.html
@@ -1,4 +1,4 @@
-<mat-card class="calculator-container" appearance="outlined">
+<mat-card class="container" appearance="outlined">
   <mat-card-header>
     <mat-icon class="icon" mat-card-avatar>thermostat</mat-icon>
     <mat-card-title>{{this.titleText}}</mat-card-title>
