--- a/KiteAndKeyBrewery/src/app/components/mash-calculator/mash-calculator.component.css
+++ b/KiteAndKeyBrewery/src/app/components/mash-calculator/mash-calculator.component.css
@@ -1,3 +1,7 @@
+form {
+  --item-padding: 25px;
+}
+
 .units-radio-group {
   display: flex;
   flex-direction: column;
@@ -5,11 +9,18 @@
   align-items: flex-start;
 }
 
-.units-radio-button {
-  margin: 5px;
+.form-item {
+  padding-left: var(--item-padding);
 }
 
 .form-group {
   display: flex;
+  margin: 15px 0;
+}
+
+.number-field {
+  display: flex;
+  flex-direction: column;
+  max-width: 350px;
   margin: 15px 0;
 }
