--- a/KiteAndKeyBrewery/srcWWW/src/app/components/mash-calculator/mash-calculator.component.css
+++ b/KiteAndKeyBrewery/srcWWW/src/app/components/mash-calculator/mash-calculator.component.css
@@ -1,24 +1,5 @@
-form {
-  --item-padding: 25px;
-}
-
-.units-radio-group {
-  display: flex;
-  flex-direction: column;
-  margin: 15px 0;
-  align-items: flex-start;
-}
-
-.form-item {
-  padding-left: var(--item-padding);
-}
-
-.form-group {
-  display: flex;
-  margin: 15px 0;
-}
-
-.number-field {
+.item-padding {
+  padding-left: 25px;
   display: flex;
   flex-direction: column;
   max-width: 350px;
