--- a/KiteAndKeyBrewery/srcWWW/src/app/components/dashboard-element/dashboard-element.component.html
+++ b/KiteAndKeyBrewery/srcWWW/src/app/components/dashboard-element/dashboard-element.component.html
@@ -1,6 +1,6 @@
 <mat-card class="container" appearance="outlined">
   <mat-card-header>
-    <mat-icon class="icon" mat-card-avatar>thermostat</mat-icon>
+    <mat-icon class="icon" mat-card-avatar>{{this.icon}}</mat-icon>
     <mat-card-title>{{this.titleText}}</mat-card-title>
     <mat-card-subtitle>Details</mat-card-subtitle>
   </mat-card-header>
